content/posts/simulate-https-certificates-acme-k8s/examples/pebble.yaml
apiVersion: v1
kind: Service
metadata:
  name: pebble
spec:
  type: ClusterIP
  ports:
    - port: 14000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pebble
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pebble
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pebble
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pebble
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: pebble
          items:
          - key: pebble-config.json
            path: pebble-config.json
      containers:
      - image: letsencrypt/pebble:v2.3.1
        imagePullPolicy: Always
        name: pebble
        ports:
        - name: http
          containerPort: 14000
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /test/config/pebble-config.json
          subPath: pebble-config.json
          readOnly: true
